fix: z-index for header

--- a/src/widgets/header/Header.module.scss
+++ b/src/widgets/header/Header.module.scss
@@ -4,6 +4,7 @@
   background-color: var(--bg-main);
   color: var(--color-white);
   position: sticky;
+  z-index: 1;
   top: 0;
   border-bottom: 1px solid transparent;
   @extend %standart-animation;
